Couple of minor notes

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Working on some quick transformations to make Erlang a bit easier on me
+Working on some quick transformations to make Erlang even more awesome
