Whitespace delimiters more consistent (esc. between strings) and compound patterns (matches) seem to be working - even with spaces around the equals-sign

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -7,8 +7,8 @@
 [x] - Explicit exports
 
 [ ] - Patterns
-  [ ] - Variable
-  [ ] - Universal (_)
+  [x] - Variable
+  [x] - Universal (_)
   [x] - Tuple
   [x] - Nil
   [x] - Cons
@@ -18,7 +18,7 @@
   [ ] - Record-lookup
   [ ] - Compound (match)
   [ ] - Type declarations
-  [ ] - All working in function clauses
+  [~] - All working in function clauses
 
 [ ] - Guards
 
