A couple of minor notes and a test for bignums

--- a/doc/TODO.txt
+++ b/doc/TODO.txt
@@ -16,7 +16,7 @@
   [ ] - Pattern-available operators
   [ ] - Record-creation
   [ ] - Record-lookup
-  [ ] - Compound (match)
+  [x] - Compound (match)
   [ ] - Type declarations
   [~] - All working in function clauses
 
