Just a bunch of thoughts and minor crystalizations of algebraic simplifications for these grammars.

--- a/stdlib/ungpeg/doc/todo.txt
+++ b/stdlib/ungpeg/doc/todo.txt
@@ -1,6 +1,6 @@
 [D] Syn highlight for proposed parse-transform stuff
 [D] Change parser etc. so that new entry-point marker is ':'
 [D] Change parser etc. so that it allows optional rule delimiter ';'
-[ ] Capture transformation phrases
-[ ] Ability to tag items
-[ ] In transformer, swap out "orig" for all relevant tags before inlining
+[D] Capture transformation phrases
+[D] Ability to tag items
+[D] In transformer, swap out "orig" for all relevant tags before inlining
