--- a/stdlib/ungpeg/doc/ungpeg.asciidoc
+++ b/stdlib/ungpeg/doc/ungpeg.asciidoc
@@ -1,9 +1,29 @@
 Ungpeg Parsing Expression Grammars
 ==================================
 Joseph Wecker <joseph.wecker@gmail.com>
+:icons:
+:toc:
+:encoding: utf-8
+:lang: en
 
 
-== Definitions
+
+== Left Recursion
+
+
+Every left-recursive sequence after inlining makes the following
+transformation:
+
+a <- a rest1 / a rest2 / s1 / s2 / a rest3
+a <= s1 / s2 a2
+a2<= (rest1 / rest2 / rest3) a2
+
+s1 and s2 are assigned all tag that are already assigned to rest1, rest2, and
+rest3 - so that they collapse properly when one of the rest* expressions is
+invoked.
+
+
+== Appendix A: Definitions
 .Expressions
 ****
 call:: `some_rule` - A reference to another rule to be invoked.
@@ -30,7 +50,7 @@ eof:: `!. or eof` - (Special) Matches the end of all input.
 
 .Misc Expressions
 ****
-sub:: Shorthand for sub-expressions.
+term:: Shorthand for sub-expressions.
 nop:: Shorthand for an expression or sub-expression that can be safely removed.
 ****
 
@@ -48,7 +68,7 @@ Suffixes / Quantifiers::
 ****
 
 
-== PEG: First Normal Form
+== Appendix B: PEG First Normal Form
 === Applicable to all (all)
 
 . Every +call+ inlined except entry-points, recursive calls, and accumulators.
@@ -59,24 +79,25 @@ Suffixes / Quantifiers::
 
 === Ordered Choice (ord)
 
-. Contains no +ord+ +sub+. (TODO: invalidated by certain +sub+ attributes).
-. Contains no +succ+ +sub+. (Everything after removed and +ord+ rewritten to
+. Contains no +ord+ terms. (TODO: invalidated by certain +term+ attributes).
+. Contains no +succ+ terms. (Everything after removed and +ord+ rewritten to
   +ord?+).
-. Contains nothing after a +star+ +sub+ (which always succeeds).
-. Contains no +opt+ +sub+. (Rewritten as +sub/succ+ and reduced as per #2).
-. Contains at least two +subs+. (Single +sub+ replaces +nop+ +ord+, with
+. Contains nothing after a +star+ term (which always succeeds).
+. Contains no +opt+ terms. (Rewritten as +term/succ+ and reduced as per #2).
+. Contains at least two +terms+. (Single +term+ replaces +nop+ +ord+, with
   attributes combined).
-. Contains no duplicate or equivalent +subs+. (Leftmost is kept).
-. Contains no +sub2+ to the right of +sub1+ that have +sub1+ as a prefix.
-. All inner +subs+ are in reduced form.
+. Contains no duplicate or equivalent +terms+. (Leftmost is kept).
+. Contains no +term2+ to the right of +term1+ that have +term1+ as a prefix.
+. All inner +terms+ are in reduced form.
 
 === Sequences (seq)
 
-. Contains no +seq+ +sub+ except where attributes differentiate. (TODO).
-. Contains no +succ+ +subs+. (Removed because they are nops)
-. Contains at least two +subs+. (Single +sub+ replaces +nop+ +seq+, with
+. Contains no +seq+ term except where attributes differentiate. (TODO).
+. Contains no +succ+ terms. (Removed because they are nops).
+. Contains no +fail+ terms. (A seq with a fail term is itself a fail term).
+. Contains at least two +terms+. (Single +term+ replaces +nop+ +seq+, with
   attributes combined).
-. All inner +subs+ are in reduced form.
+. All inner +terms+ are in reduced form.
 
 === Attributes (attr)
 [NOTE]
@@ -168,5 +189,7 @@ a:: s or f (any of the above)
 
 ==== Algorithm
 The primary objective is to detect any concrete possibility of `e1`->0 in
-`e1*`.
+`e1*`. The secondary objective, if possible, is to detect the possibility of a
+recursive rule recursing without consuming any input (after left-recursion
+rules are put into place).
 
