--- a/stdlib/ungpeg/doc/todo.txt
+++ b/stdlib/ungpeg/doc/todo.txt
@@ -1,4 +1,6 @@
 [ ] Left recursion
+    - http://pages.cpsc.ucalgary.ca/~robin/class/411/LL1.3.html
+    - www.d.umn.edu/~hudson/5641/l11m.pdf
 [ ] Opt backtracking/memoizing elimination
 [ ] Multi backtracking/memoization elimination
 [ ] Predicate backtracking/memoization elimination
@@ -15,6 +17,7 @@
     left-recursion algorithm.  (the latter, so that distinct grammars can be
     combined and it'll work correctly - that is, entry points to expressions
     that don't overlap with other entry points' instructions).
+[ ] Figure out panic-mode (skip ahead) error recovery
 
 --- Finished
 [D] Fix ungpeg_n so that it's ok with 'Blah' styled names
